[gd_scene load_steps=4 format=2]

[ext_resource path="res://_common/Materials/SmallWhiteSquare.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemies/Swarm/SwarmMother.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[node name="SwarmMother" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.113725, 0.0235294, 0.129412, 1 )
texture = ExtResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Sprite"]
amount = 3
lifetime = 0.5
local_coords = false
emission_shape = 1
emission_sphere_radius = 18.15
spread = 180.0
gravity = Vector2( 0, 0 )
angle = 45.0
angle_random = 0.9
scale_amount = 16.0
color = Color( 0.0901961, 0.0196078, 0.184314, 1 )

[node name="Line2D" type="Line2D" parent="Sprite"]
width = 2.0
default_color = Color( 0.623529, 0.254902, 0.709804, 0.529412 )

[node name="EyeL" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.882353, 0.0352941, 0.0352941, 1 )
position = Vector2( -8, -8 )
scale = Vector2( 0.168068, 0.168296 )
texture = ExtResource( 1 )

[node name="EyeR" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.882353, 0.0352941, 0.0352941, 1 )
position = Vector2( 8, -8 )
scale = Vector2( 0.168068, 0.168296 )
texture = ExtResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="DecayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_DeathTimer_timeout"]
